trying to fix nav spacing

--- a/src/Components/Navigation/Navigation.css
+++ b/src/Components/Navigation/Navigation.css
@@ -8,7 +8,7 @@
   margin: 0;
   background-color: #ffffff !important;
   align-items: center;
-  padding: 10px 2%;
+  padding: 10px;
   font-family: monospace;
 }
 
